Corrected alignment and visual issues on desktop and Android versions, still debugging iOS version

--- a/tasks/digit-symbol/css/digit-symbol.css
+++ b/tasks/digit-symbol/css/digit-symbol.css
@@ -26,9 +26,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
 #iconBar {
-    margin: 50px auto;
+    margin: 2% auto;
     text-align: center;
-    height:  200px;
+    height:  25%;
 }
 
 .digitSymbol {
@@ -38,8 +38,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     position: relative;
     display: inline-block;
     border: 3px solid white;
-    width: 100px;
-    height: 200px;
+    width: 9%;
+    height: 90%;
     margin: 0 10px 0 10px;
 }
 
@@ -47,11 +47,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     display: block;
     text-align: center;
     margin: auto auto;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 50%;  /* auto? */
     font-size: 10em;
     border-bottom: 3px solid white;
-    line-height: 1em;
+    line-height: 100%;
     float: left;
 }
 
@@ -60,8 +60,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 .digitSymbol .digitSymbolBottom {
     display: block;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 50%;
     clear: both;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -70,7 +70,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 .digitSymbol .digitSymbolBottom img {
     display: block;
-    margin: auto auto;
+    margin: auto;
     padding: 5px;
     text-align: center;
     max-width: 75%;
@@ -95,9 +95,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #symbolBar .symbol {
     position: absolute;
     display: block;
-    width: 120px;
-    height: 120px;
+    width: 9%;
+    height: 22%;
     border-radius: 100%;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
     border: 3px solid rgba(255, 255, 255, .5);
     padding: 1.5%;
     margin: 1%;
@@ -120,37 +122,40 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 #symbol1 {
-    left: 3%;
+    left: 0%;
     bottom: 67%;
 }
 
 #symbol2 {
-    left: 13%;
-    bottom: 37%;
+    left: 11%;
+    bottom: 34%;
 }
 
 #symbol3 {
-    left: 27%;
-    bottom: 16%;
-}
-
-#symbol4 {
-    left: 44%;
+    left: 26%;
     bottom: 12%;
 }
 
+#symbol4 {
+    left: 42.5%;
+    bottom: 6%;
+}
+
 #symbol5 {
-    left: 61%;
-    bottom: 16%;
+    left: auto;
+    right: 26%;
+    bottom: 12%;
 }
 
 #symbol6 {
-    left: 76%;
-    bottom: 37%;
+    left: auto;
+    right: 11%;
+    bottom: 34%;
 }
 
 #symbol7 {
-    left: 87%;
+    left: auto;
+    right: 0%;
     bottom: 67%;
 }
 
